<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_3_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.Material3.CardView.Filled">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="3">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:src="@drawable/card_back"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_weight="2"
                    android:text="@string/grid_3_2"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_4_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_3_2"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="3">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:src="@drawable/card_back"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_weight="2"
                    android:text="@string/grid_4_3"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_5_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_4_3"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="3">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:src="@drawable/card_back"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_weight="2"
                    android:text="@string/grid_5_4"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_6_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_5_4"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="3">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:src="@drawable/card_back"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_weight="2"
                    android:text="@string/grid_5_4"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_8_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_5_4"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="3">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:src="@drawable/card_back"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_weight="2"
                    android:text="@string/grid_8_7"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_9_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_8_7"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="3">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:src="@drawable/card_back"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_weight="2"
                    android:text="@string/grid_9_8"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>